# cyton1500

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/find_object_2d/: ObjectsStamped.h
devel/include/my_dynamixel_tutorial/: SetSpeed.h  SetSpeedRequest.h  SetSpeedResponse.h
devel/lib/find_object_2d/: find_object_2d  print_objects_detected  tf_example
devel/lib/my_dynamixel_tutorial/: Cyton_EE  Cyton_EE_random  Cyton_EE_test  Cyton_FC  Cyton_FC_close  Cyton_FC_control  Cyton_FC_open  Cyton_FK  Cyton_FSM  Cyton_GA  Cyton_SS  Cyton_home  Kinect_Cyton_TF  Kinect_HT  arm  armsrv  ball7  cyton_JS  cyton_JS (Case Conflict)  cyton_SV  fix  hand  objdet  objdetblue  objdetgreen  objdetred  skelCord  testews  try  try1  try2
devel/lib/openni_tracker/: openni_tracker
devel/lib/pkgconfig/: cyton_gamma_1500_description.pc  cyton_gamma_1500_moveit_config.pc  descartes_core.pc  descartes_moveit.pc  descartes_planner.pc  descartes_trajectory.pc  descartes_utilities.pc  find_object_2d.pc  my_dynamixel_tutorial.pc  openni_tracker.pc  pr2_moveit_config.pc  pr2_moveit_tutorials.pc  r2d2.pc
devel/lib/pr2_moveit_tutorials/: Cyton_IK  Cyton_IK1  kinematic_model_tutorial  motion_planning_api_tutorial  move_group_interface_tutorial  planning_pipeline_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  ros_api_tutorial
devel/lib/python2.7/dist-packages/find_object_2d/msg/: _ObjectsStamped.py
devel/lib/r2d2/: cyton_3DOF_state_publisher  cyton_state_publisher  fanuc_state_publisher  state_publisher
devel/share/cyton_gamma_1500_description/cmake/: cyton_gamma_1500_descriptionConfig.cmake
devel/share/cyton_gamma_1500_moveit_config/cmake/: cyton_gamma_1500_moveit_configConfig.cmake
devel/share/descartes_core/cmake/: descartes_coreConfig.cmake
devel/share/descartes_moveit/cmake/: descartes_moveitConfig.cmake
devel/share/descartes_planner/cmake/: descartes_plannerConfig.cmake
devel/share/descartes_trajectory/cmake/: descartes_trajectoryConfig.cmake
devel/share/descartes_utilities/cmake/: descartes_utilitiesConfig.cmake
devel/share/find_object_2d/cmake/: find_object_2d-msg-extras.cmake  find_object_2d-msg-paths.cmake  find_object_2dConfig.cmake
devel/share/my_dynamixel_tutorial/cmake/: my_dynamixel_tutorial-msg-extras.cmake  my_dynamixel_tutorial-msg-paths.cmake  my_dynamixel_tutorialConfig.cmake
devel/share/openni_tracker/cmake/: openni_trackerConfig.cmake
devel/share/pr2_moveit_config/cmake/: pr2_moveit_configConfig.cmake
devel/share/pr2_moveit_tutorials/cmake/: pr2_moveit_tutorialsConfig.cmake
devel/share/r2d2/cmake/: r2d2Config.cmake
src/: README.md  README.md~
src/cyton_gamma_1500/cyton_gamma_1500_description/: CMakeLists.txt
src/cyton_gamma_1500/cyton_gamma_1500_description/launch/: cyton_gamma_1500.launch  cyton_gamma_1500.launch~  generate_urdf.launch
src/cyton_gamma_1500/cyton_gamma_1500_description/urdf/: cyton_gamma_1500.gv  cyton_gamma_1500.rviz  cyton_gamma_1500.urdf  cyton_gamma_1500.urdf~  cyton_gamma_1500_with_sensor.urdf  cyton_model.urdf
src/cyton_gamma_1500/cyton_gamma_1500_moveit_config/: CMakeLists.txt~  package.xml  package.xml~
src/cyton_gamma_1500/cyton_gamma_1500_moveit_config/config/: controllers.yaml~  cyton_gamma_1500.srdf  kinematics.yaml  kinematics.yaml~  sensor.yaml
src/cyton_gamma_1500/cyton_gamma_1500_moveit_config/launch/: cyton_gamma_1500_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/cyton_gamma_1500/pr2_moveit_tutorials/: CMakeLists.txt~
src/cyton_gamma_1500/pr2_moveit_tutorials/kinematics/: CMakeLists.txt  CMakeLists.txt~
src/cyton_gamma_1500/pr2_moveit_tutorials/kinematics/launch/: fk_test.launch~  kinematic_model_tutorial.launch  kinematic_model_tutorial.launch~  ros_api_tutorial.launch  ros_api_tutorial.launch~
src/cyton_gamma_1500/pr2_moveit_tutorials/kinematics/src/: Cyton_IK.cpp~  Cyton_IK1.cpp~  kinematic_model_tutorial.cpp~  ros_api_tutorial.cpp  ros_api_tutorial.cpp~  t.csv~  tt.csv~
src/cyton_gamma_1500/pr2_moveit_tutorials/planning/: CMakeLists.txt
src/cyton_gamma_1500/pr2_moveit_tutorials/planning/launch/: motion_planning_api_tutorial.launch  motion_planning_api_tutorial.launch~
src/cyton_gamma_1500/pr2_moveit_tutorials/planning/src/: motion_planning_api_tutorial.cpp  motion_planning_api_tutorial.cpp~  move_group_tutorial.cpp  move_group_tutorial.cpp~
src/my_dynamixel_tutorial/: CMakeLists.txt  CMakeLists.txt~  dual_motor.yaml~  package.xml~  pan.yaml~  tilt.yaml  tilt.yaml~
src/my_dynamixel_tutorial/launch/: controller_manager.launch  controller_manager.launch~  start_dual_motor_controller.launch~  start_meta_controller.launch~  start_tilt_controller.launch  start_tilt_controller.launch~
src/my_dynamixel_tutorial/src/: Cyton_EE.cpp  Cyton_EE_random.cpp~  Cyton_EE_test.cpp  Cyton_FC.cpp~  Cyton_FC1.cpp~  Cyton_FC2.cpp~  Cyton_FC_close.cpp  Cyton_FC_close.cpp~  Cyton_FC_control.cpp  Cyton_FC_control.cpp~  Cyton_FC_open.cpp  Cyton_FC_open.cpp~  Cyton_FK.cpp  Cyton_FK.cpp~  Cyton_FK1.cpp~  Cyton_FSM.cpp  Cyton_FSM.cpp~  Cyton_GA.cpp  Cyton_GA.cpp~  Cyton_JS.cpp  Cyton_SS.cpp  Cyton_SS.cpp~  Cyton_home.cpp  KC_TRANSFORM.cpp  KC_TRANSFORM.cpp~  Kinect_Cyton_TF.cpp~  Kinect_HT.cpp  arm.cpp~  armsrv.cpp~  cyton_EE.cpp~  cyton_IK.cpp~  cyton_JS.cpp~  cyton_SV.cpp  cyton_SV.cpp~  fix.cpp  fix.cpp~  fk_test.cpp~  hand.cpp~  objdet.cpp~  objdetblue.cpp  (+12 more)
src/r2d2/: CMakeLists.txt
src/r2d2/launch/: cyton_3DOF_display.launch  cyton_display.launch  cyton_display.launch~  display.launch  fanuc_display.launch
src/r2d2/src/: cyton_3DOF_state_publisher.cpp  cyton_state_publisher.cpp  cyton_state_publisher.cpp~  cyton_state_publisher1cpp  fanuc_state_publisher.cpp
(+4 files in other folders)
